really should stop pushing to main ....

--- a/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
+++ b/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
@@ -2,8 +2,8 @@
 pipeline {
     agent any
     environment{
-        common = load '../vars/common.groovy'
-        mordor = load '../vars/mordor.groovy'
+        common = load 'jenkins_pipeline/vars/common.groovy'
+        mordor = load 'jenkins_pipeline/vars/mordor.groovy'
     }
     stages {
         stage('MORDOR - Checkout') {
