--- a/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
+++ b/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
@@ -1,10 +1,9 @@
-@load 'packages/jenkins_pipelines/vars/common.groovy'
-@load 'packages/jenkins_pipelines/vars/mordor.groovy'
-
 pipeline {
     agent any
     environment{
     }
+    def common = load 'packages/jenkins_pipelines/vars/common.groovy'
+    def common = load 'packages/jenkins_pipelines/vars/mordor.groovy'
     stages {
         stage('MORDOR - Checkout') {
             steps {
