--- a/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
+++ b/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     environment{
     }
     def common = load 'packages/jenkins_pipelines/vars/common.groovy'
-    def common = load 'packages/jenkins_pipelines/vars/mordor.groovy'
+    def mordor = load 'packages/jenkins_pipelines/vars/mordor.groovy'
     stages {
         stage('MORDOR - Checkout') {
             steps {
