--- a/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
+++ b/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
@@ -51,7 +51,7 @@ pipeline {
     stages {
         stage('MORDOR - Checkout') {
             steps {
-    	    
+    	    sh 'echo "made it this far"'
         }}
 
         stage('MORDOR - Build') {
