--- a/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
+++ b/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
@@ -53,8 +53,10 @@ pipeline {
         stage('Pull Images') {
             steps {
         	    withVault([vaultSecrets: secrets]) {
+                    script{
                     CG_IMAGE.each { item ->
                         sh 'docker pull ${item}'
+                    }
                     }
         	    }
             }
