--- a/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
+++ b/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
@@ -54,7 +54,7 @@ pipeline {
             steps {
         	    withVault([vaultSecrets: secrets]) {
                     script{
-                    CG_IMAGE.each { item ->
+                    ${CG_IMAGE}.each { item ->
                         sh 'docker pull ${item}'
                     }
                     }
