--- a/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
+++ b/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
@@ -105,6 +105,7 @@ pipeline {
 @NonCPS 
 def pullAll(list){
     list.each { item ->
-        docker pull ${item}
+        sh "echo ${list}"
+        sh "docker pull ${item}"
     }
 }
