--- a/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
+++ b/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
@@ -104,7 +104,7 @@ pipeline {
 
 @NonCPS 
 def pullAll(list){
-    list.each { item ->
-        sh "docker pull ${item}"
+    for (int i = 0; i < list.size(); i++) {
+        sh "docker pull ${list[i]}"
     }
 }
