--- a/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
+++ b/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
@@ -105,6 +105,6 @@ pipeline {
 @NonCPS 
 def pullAll(list){
     for (int i = 1; i < list.size(); i++) {
-        sh "docker pull ${list[i]}"
+        sh "echo ${list[i]}"
     }
 }
