add metrics ports

--- a/packages/compose/web3signer/docker-compose.eth1.yml
+++ b/packages/compose/web3signer/docker-compose.eth1.yml
@@ -4,7 +4,8 @@ services:
   web3Signer:
     image: $WEB3SIGNER_IMAGE
     ports:
-      - "$WEB3SIGNER_API:$WEB3SIGNER_API"
+      - "$WEB3SIGNER_HTTP_LISTEN_PORT:$WEB3SIGNER_HTTP_LISTEN_PORT"
+      - "$WEB3SIGNER_METRICS_PORT:WEB3SIGNER_METRICS_PORT"
     healthcheck:
       test: ["CMD", "redis-cli", "-h", "localhost", "-p", "6379", "ping"]
       interval: 2s
