--- a/packages/jenkins_pipelines/web3signer/Jenkinsfile
+++ b/packages/jenkins_pipelines/web3signer/Jenkinsfile
@@ -40,6 +40,7 @@ def secrets = [
             [envVar:   "WEB3SIGNER_ETH1_KEYSTORES_PASSWORD_FILE", vaultKey:    "WEB3SIGNER_ETH1_KEYSTORES_PASSWORD_FILE"],
             [envVar:   "WEB3SIGNER_ETH1_KEYSTORES_PASSWORDS_PATH", vaultKey:    "WEB3SIGNER_ETH1_KEYSTORES_PASSWORDS_PATH"],
             [envVar:   "WEB3SIGNER_ETH1_KEYSTORES_PATH", vaultKey:    "WEB3SIGNER_ETH1_KEYSTORES_PATH"],
+            [envVar:   "WEB3SIGNER_ETH1_CHAIN_ID", vaultKey: "WEB3SIGNER_ETH1_CHAIN_ID"],
         ]]
     ]
 
