--- a/packages/compose/web3signer/docker-compose.eth1.yml
+++ b/packages/compose/web3signer/docker-compose.eth1.yml
@@ -8,4 +8,5 @@ services:
       - "$WEB3SIGNER_METRICS_PORT:$WEB3SIGNER_METRICS_PORT"
     command:
       -  eth1
+      - --chain-id=${WEB3SIGNER_ETH1_CHAIN_ID}
     
