--- a/packages/compose/lightwalletd/docker-compose.yml
+++ b/packages/compose/lightwalletd/docker-compose.yml
@@ -5,13 +5,13 @@ services:
     image: ${LWD_IMAGE}
     #entrypoint: ["/bin/bash", "-c", "sleep infinity"]
     command: >
-        --grpc-bind-addr=0.0.0.0:8000
-        --http-bind-addr=0.0.0.0:8100
-        --log-file=/dev/stdout
-        --log-level=7
-        --no-tls-very-insecure
-#      - --tls-cert=/var/lib/lightwalletd/cert.pem
-#      - --tls-key=/var/lib/lightwalletd/key.pem 
+      --grpc-bind-addr=0.0.0.0:8000
+      --http-bind-addr=0.0.0.0:8100
+      --log-file=/dev/stdout
+      --log-level=7
+      --no-tls-very-insecure
+#     --tls-cert=/var/lib/lightwalletd/cert.pem
+#     --tls-key=/var/lib/lightwalletd/key.pem 
     ports:
       - '${LWD_GRPC_PORT}:8000'
       - '${LWD_HTTP_PORT}:8100'      
