--- a/packages/compose/lightwalletd/docker-compose.yml
+++ b/packages/compose/lightwalletd/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: ${LWD_IMAGE}
     #entrypoint: ["/bin/bash", "-c", "sleep infinity"]
     volumes:
-        - "./zcash.conf:/root/zcash.conf"
+        - "${PWD}/zcash.conf:/root/zcash.conf"
     command: 
       - --grpc-bind-addr=0.0.0.0:8000
       - --http-bind-addr=0.0.0.0:8100
