--- a/packages/compose/lightwalletd/docker-compose.yml
+++ b/packages/compose/lightwalletd/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     #entrypoint: ["/bin/bash", "-c", "sleep infinity"]
     volumes:
         - "${PWD}/zcash.conf:/srv/lightwalletd/zcash.conf"
+        - lightwalletd_cache:/var/lib/lightwalletd
+
     command: 
       - --grpc-bind-addr=0.0.0.0:8000
       - --http-bind-addr=0.0.0.0:8100
@@ -21,3 +23,5 @@ services:
       - '${LWD_GRPC_PORT}:8000'
       - '${LWD_HTTP_PORT}:8100'      
     restart: always
+volumes:
+  lightwalletd_cache: 
