--- a/packages/compose/lightwalletd/docker-compose.yml
+++ b/packages/compose/lightwalletd/docker-compose.yml
@@ -23,5 +23,7 @@ services:
       - '${LWD_GRPC_PORT}:8000'
       - '${LWD_HTTP_PORT}:8100'      
     restart: always
+    network:
+      - 'chippr-backbone' 
 volumes:
   lightwalletd_cache: 
