--- a/packages/compose/zebra/docker-compose.yml
+++ b/packages/compose/zebra/docker-compose.yml
@@ -16,4 +16,6 @@ services:
       - '0.0.0.0:${ZEBRAD_RPC}:8232'
       - '0.0.0.0:${ZEBRAD_METRICS}:9999'
     networks:
-      - 'chippr-backbone'
+      - chippr-backbone
+networks:
+  chippr-backbone:
