--- a/packages/compose/lightwalletd/docker-compose.yml
+++ b/packages/compose/lightwalletd/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       - '${LWD_HTTP_PORT}:8100'      
     restart: always
     networks:
-      - 'chippr-backbone' 
+      - chippr-backbone
 volumes:
   lightwalletd_cache: 
+networks:
+  chippr-backbone:
