--- a/packages/compose/zebra/docker-compose.yml
+++ b/packages/compose/zebra/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       - '0.0.0.0:${ZEBRAD_RPC}:8232'
       - '0.0.0.0:${ZEBRAD_METRICS}:9999'
     networks:
-      - chippr-backbone
+      - backbone
 networks:
-  chippr-backbone:
+  backbone:
+    external:
+      name: chippr-backbone
