make backbone external

--- a/packages/compose/lightwalletd/docker-compose.yml
+++ b/packages/compose/lightwalletd/docker-compose.yml
@@ -29,5 +29,5 @@ volumes:
   lightwalletd_cache: 
 networks:
   backbone:
-    external:
-      name: chippr-backbone
+    name: chippr-backbone
+    external: true
