--- a/packages/compose/zebra/docker-compose.yml
+++ b/packages/compose/zebra/docker-compose.yml
@@ -19,5 +19,5 @@ services:
       - backbone
 networks:
   backbone:
-    external:
-      name: chippr-backbone
+    name: chippr-backbone
+    external: true
