modified:   packages/compose/lightwalletd/docker-compose.yml 	modified:   packages/compose/zebra/docker-compose.yml

--- a/packages/compose/zebra/docker-compose.yml
+++ b/packages/compose/zebra/docker-compose.yml
@@ -15,7 +15,8 @@ services:
     ports:
       - '0.0.0.0:${ZEBRAD_RPC}:8232'
       - '0.0.0.0:${ZEBRAD_METRICS}:9999'
-
+    networks: 
+      - backbone
 networks:
   backbone:
     name: chippr-backbone
