--- a/packages/compose/lightwalletd/docker-compose.yml
+++ b/packages/compose/lightwalletd/docker-compose.yml
@@ -23,6 +23,8 @@ services:
       - '${LWD_GRPC_PORT}:8000'
       - '${LWD_HTTP_PORT}:8100'      
     restart: always
+    networks:
+      - backbone
 volumes:
   lightwalletd_cache: 
 networks:
