fx name of overlay

--- a/packages/compose/lightwalletd/docker-compose.yml
+++ b/packages/compose/lightwalletd/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - backbone
 networks:
   backbone:
-    name: chippr-backbone
+    name: chipprbackbone
     external: true
 
 volumes:
