--- a/packages/compose/lightwalletd/docker-compose.yml
+++ b/packages/compose/lightwalletd/docker-compose.yml
@@ -7,8 +7,12 @@ services:
       - backbone
     entrypoint: ["/bin/bash", "-c", "sleep infinity"]
     volumes:
-        - "${PWD}:/srv/lightwalletd"
-        - lightwalletd_cache:/var/lib/lightwalletd
+        - type: bind
+          source: ${PWD}
+          target: /srv/lightwalletd
+        - type: volume
+          source: lightwalletd_cache
+          target: /var/lib/lightwalletd
     command: 
       - --grpc-bind-addr=0.0.0.0:8000
       - --http-bind-addr=0.0.0.0:8100
@@ -23,6 +27,7 @@ services:
     ports:
       - '${LWD_GRPC_PORT}:8000'
       - '${LWD_HTTP_PORT}:8100'
+
 
 networks:
   backbone:
