lwd networking hide comand

--- a/packages/compose/lightwalletd/docker-compose.yml
+++ b/packages/compose/lightwalletd/docker-compose.yml
@@ -13,21 +13,20 @@ services:
         - type: volume
           source: lightwalletd_cache
           target: /var/lib/lightwalletd
-    command: 
-      - --grpc-bind-addr=0.0.0.0:8000
-      - --http-bind-addr=0.0.0.0:8100
-      - --log-file=/dev/stdout
-      - --log-level=7
-      - --rpchost=${LWD_ZEBRAHOST}
-      - --rpcport=${LWD_ZEBRAPORT}
-      - --no-tls-very-insecure
-      - --zcash-conf-path=/srv/lightwalletd/zcash.conf
+#    command: 
+#      - --grpc-bind-addr=0.0.0.0:8000
+#      - --http-bind-addr=0.0.0.0:8100
+#      - --log-file=/dev/stdout
+#      - --log-level=7
+#      - --rpchost=${LWD_ZEBRAHOST}
+#      - --rpcport=${LWD_ZEBRAPORT}
+#      - --no-tls-very-insecure
+#      - --zcash-conf-path=/srv/lightwalletd/zcash.conf
       #     --tls-cert=/var/lib/lightwalletd/cert.pem
 #     --tls-key=/var/lib/lightwalletd/key.pem 
     ports:
       - '${LWD_GRPC_PORT}:8000'
       - '${LWD_HTTP_PORT}:8100'
-
 
 networks:
   backbone:
