--- a/packages/compose/coregeth/docker-compose.yml
+++ b/packages/compose/coregeth/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - type: bind 
         source: ${DATA}
         target: /root
-    command:      
-      - ${GETH_FLAGS}
+    command: >      
+      ${GETH_FLAGS}
 
 networks:
   backbone:
