--- a/packages/compose/coregeth/docker-compose.yml
+++ b/packages/compose/coregeth/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - type: bind 
         source: ${DATA}
         target: /root
-    command: ${GETH_FLAGS}
+    command: [ ${GETH_FLAGS} ]
 
 networks:
   backbone:
