--- a/packages/compose/metrics/docker-compose.yml
+++ b/packages/compose/metrics/docker-compose.yml
@@ -1,53 +1,33 @@
 version: "3.8"
 
 services:
-  grafana:
-    image: $GF_IMAGE
+  GRAFANA:
+    image: ${GF_IMAGE}
+    volumes:
+      - type: bind
+        source: ${GF_DATA}
+        target: /var/lib/grafana
+      - type: bind
+        source: ${GF_ETC}
+        target: /etc/grafana       
     depends_on:
       - prometheus
-    ports:
-      - "$GF_SERVER_HTTP_PORT:3000"
-    volumes:
-      - grafana-storage:/var/lib/grafana
-      - grafana-etc:/etc/grafana       
     networks:
-      - chippr-metrics
-    restart: always
-
-
-  prometheus:
-    image: $PROM_IMAGE
-    ports:
-      - "$PROM_PORT:9090"
+      - backbone
+ 
+  PROM:
+    image: ${PROM_IMAGE}
     volumes:
-      - prometheus-storage:/prometheus
-      - $PROM_CONF:/etc/prometheus/prometheus.yml
+      - type: bind
+        source: $PROM_DATA
+        target: /prometheus
+      - type: bind
+        source: $PROM_CONF
+        target: /etc/prometheus/prometheus.yml
     networks:
-      - chippr-metrics
       - backbone
 
-volumes:
-  prometheus-storage:
-    driver: local
-    driver_opts:
-      type: bind
-      device: $PROM_DATA
-      o: bind
-  grafana-storage:
-    driver: local
-    driver_opts:
-      type: bind
-      device: $GF_DATA
-      o: bind
-  grafana-etc:
-    driver: local
-    driver_opts:
-      type: bind
-      device: $GF_ETC
-      o: bind
-  
 networks:
   backbone:
     name: chipprbackbone
     external: true
-  chippr-metrics:
